fix quoting of dependencies with spaces

Always quote file name macro values that contain whitespace, because
every file name macro expansion produces a - guess what - file name.

Task-number: QTCREATORBUG-12296
Change-Id: I6a0ae25ed7a6f7fdbdfc5b81a3c5aea489ed2b37
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>